--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
   border: none;
 }
 
-.submit_btn:hover {
+.search_btn:hover {
   color: rgb(255, 255, 255);
   background-color: rgb(5, 5, 210);
 }
@@ -56,7 +56,5 @@ body {
   }
   .search_bar {
     width: 60%;
-  }
-  .search_btn {
   }
 }
